# zoom-logs-parser

./: .env.example  README.md  pyproject.toml
src/: main.py  settings.py
